bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: type mismatch;
 found   : Int(111)
 required: Boolean
  if ( 89< n <111) {
              ^NearHundred:5: error: type mismatch;
 found   : Int(211)
 required: Boolean
  if (189< n <211) {
              ^